# kube-enum

./: .gitignore  README.md  pyproject.toml
src/kube_enum/: analyze.py  cli.py  dump_config.py
