[project]
name = "kube-enum"
version = "0.1.0"
description = "Kubernetes config enum/analysis tool"
authors = [
    {name = "renthog", email = "58467174+renthog@users.noreply.github.com"},
]
dependencies = [
    "kubernetes>=30.1.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = true

[tool.pdm.scripts]
kube-enum = "python -m kube_enum.cli"

[project.scripts]
kube-enum = "kube_enum.cli:main"
